[project]
name = "supply-chain-route-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap>=1.4.3",
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
]
